--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "airtable": "0.11.6",
     "ajv": "8.12.0",
     "amqplib": "0.10.4",
+    "apify-client": "2.19.0",
     "assemblyai": "4.7.0",
     "async-mutex": "0.4.0",
     "axios": "1.8.3",
